--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <script src="chaiaurcode.js"></script>
+    <script src="chai.js"></script>
   </body>
 </html>
